Logo added & DevOps

--- a/source/_static/style.css
+++ b/source/_static/style.css
@@ -1,3 +1,10 @@
 .wy-nav-content {
     max-width: 800px !important;
 }
+
+svg {
+    width: 70%;
+    text-align:center;
+    display: block;
+    margin: auto;
+}
